--- a/static/lab/lab01.html
+++ b/static/lab/lab01.html
@@ -315,13 +315,8 @@ $(document).ready(function () {
 <div id="TOC">
 <ul>
 <li><a href="#problem-1">Problem 1</a></li>
-<li><a href="#download-and-install-r-and-rstudio">Download and Install R and RStudio</a></li>
-<li><a href="#introduction-to-r-and-rstudio"><span>Introduction to R and RStudio</span></a></li>
-<li><a href="#project-management-with-rstudio"><span>Project Management With RStudio</span></a></li>
-<li><a href="#r-packages">R Packages</a></li>
-<li><a href="#import-data"><span>Import Data</span></a></li>
-<li><a href="#tasks">Tasks</a></li>
-<li><a href="#resources">Resources</a></li>
+<li><a href="#problem-2">Problem 2</a></li>
+<li><a href="#problem-3">Problem 3</a></li>
 </ul>
 </div>
 
@@ -331,51 +326,42 @@ $(document).ready(function () {
 <ol style="list-style-type: lower-alpha">
 <li>Specify the probability distribution of <span class="math inline">\(Z_{i}\)</span> along with the value(s) of parameter(s).</li>
 </ol>
-</div>
-<div id="download-and-install-r-and-rstudio" class="section level2">
-<h2>Download and Install R and RStudio</h2>
-<p>(for those not on lab computers)</p>
-<ul>
-<li><p>Install the R Software</p>
-<p>Go to <a href="http://cran.rstudio.com/" class="uri">http://cran.rstudio.com/</a> and click on Download R for Windows (or OSX), click on install R for the first time and download R. When the file is done downloading, double click “R-3.4.1-win.exe” (or apporiate installation file for your OS) to install the file and select Run, and continue with the installation wizard.</p></li>
-<li><p>Install Rstudio</p>
-<p>There are many ways to interface with R from the bare-bones base R software, RStudio, or R Commander (a GUI wrapper for base R). We will be using RStudio for our labs. In order to install RStudio visit <a href="http://www.rstudio.com/products/rstudio/download" class="uri">http://www.rstudio.com/products/rstudio/download</a> and download RStudio for desktop for your operating system. If in the lab and RStudio is not installed and the software manager is not working you can download the zip/tar RStudio for windows, open the zip file, and run RStudio without installing. If you must do this, then I recommend downloading the zip/tar file to your H: drive where it stays after you switch computers.</p></li>
-</ul>
-</div>
-<div id="introduction-to-r-and-rstudio" class="section level2">
-<h2><a href="http://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro/">Introduction to R and RStudio</a></h2>
-</div>
-<div id="project-management-with-rstudio" class="section level2">
-<h2><a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro/">Project Management With RStudio</a></h2>
-</div>
-<div id="r-packages" class="section level2">
-<h2>R Packages</h2>
-<p>One of the advantages of R is the thousands packages that extend the functionailities of base R. A major part of learning R is to learn to work with R packages. Besides the base R, we will use a suite of packages named <a href="https://www.tidyverse.org/"><code>tidyverse</code></a> that covers the whole process of data analysis. To install the <code>tidyverse</code> packages, you can use the <strong>Packages</strong> pane or run R function in RStudio’s <strong>Console</strong> pane:</p>
-<pre class="r"><code>install.packages(&quot;tidyverse&quot;)</code></pre>
-<p>To use R packages you have installed, include this line in your script or in the Console:</p>
-<pre class="r"><code>library(&quot;tidyverse&quot;)
-# Note here the quotation marks are optional and
-# it is the same as
-library(tidyverse)</code></pre>
-</div>
-<div id="import-data" class="section level2">
-<h2><a href="http://cities.github.io/datascience/import.html">Import Data</a></h2>
-</div>
-<div id="tasks" class="section level2">
-<h2>Tasks</h2>
-<ol style="list-style-type: decimal">
-<li>Create a new RStudio project and create directory structure following the recommendation in <a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro/">Project Management With RStudio</a></li>
-<li>Select a dataset from the [Tools and Datasets] section of the course website, save the dataset in the data folder of your project</li>
-<li>Famarlize yourself with your dataset with the data document;</li>
-<li>Create a script that imports your dataset into R and explores it with descriptive statistics and/or visulization.</li>
+<p>Let <span class="math inline">\(Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li><p>Comptute the <span class="math inline">\(E(Y_{1})\)</span></p></li>
+<li><p>Comptute the <span class="math inline">\(Var(Y_{1})\)</span></p></li>
+<li><p>Specify the probability distribution of <span class="math inline">\(Y_{1}\)</span> along with the value(s) of parameter(s).</p></li>
+<li><p>Specify the probability distribution of <span class="math inline">\(Z_{i}^2\)</span> along with the value(s) of parameter(s).</p></li>
+</ol>
+<p>Let <span class="math inline">\(Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li>Specify the probability distribution of <span class="math inline">\(Y_{2}\)</span> along with the value(s) of parameter(s).</li>
 </ol>
 </div>
-<div id="resources" class="section level2">
-<h2>Resources</h2>
-<ul>
-<li><a href="https://campus.datacamp.com/courses/free-introduction-to-r/chapter-1-intro-to-basics-1?ex=1">Introduction to R on Data Camp</a>: A self-instruction course covering R basics.</li>
-<li><a href="http://swcarpentry.github.io/r-novice-gapminder/">R coding basics on Software Carpentry</a>, hands-on tutorial on R basics, lesson 4-11.</li>
-</ul>
+<div id="problem-2" class="section level2">
+<h2>Problem 2</h2>
+<p>Let <span class="math inline">\(X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li>Specify the distribution of <span class="math inline">\(\overline{A}\)</span> along with the value(s) of parameter(s).</li>
+</ol>
+<p>Let <span class="math inline">\(W\sim\chi_{\nu_{1}}^2\)</span> where <span class="math inline">\(\nu_{1}\)</span> is the degrees of freedom, <span class="math inline">\(\overline{X}\ and\ W\)</span> are indipendent.</p>
+<p>Consider the new random variable <span class="math inline">\(\frac{\overline{X}}{\sqrt{W/\nu_{1}}}\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li>Specify the distribution of this new randome variable along with the value(s) of parameter(s).</li>
+</ol>
+<p>Let <span class="math inline">\(V\sim\chi_{\nu_{1}}^2\)</span> where <span class="math inline">\(\nu_{2}\)</span> is the degrees of freedom, <span class="math inline">\(V\ and\ W\)</span> are indipendent.</p>
+<p>Consider the new random variable <span class="math inline">\(\frac{W/\nu_{1}}{V/\nu_{2}}\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li>Specify the distribution of this new randome variable and provide value(s) of parameter(s).</li>
+</ol>
+</div>
+<div id="problem-3" class="section level2">
+<h2>Problem 3</h2>
+<p>Let <span class="math inline">\(Y|x=a+bx+\epsilon\ where\ a, b\ are constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2\)</span></p>
+<ol style="list-style-type: lower-alpha">
+<li><p>Comptute the <span class="math inline">\(E(Y|x_{0})\)</span></p></li>
+<li><p>Comptute the <span class="math inline">\(Var(Y|x_{0})\)</span></p></li>
+</ol>
 </div>
 
 
