refine the equation

--- a/static/lab/lab01.html
+++ b/static/lab/lab01.html
@@ -357,7 +357,7 @@ $(document).ready(function () {
 </div>
 <div id="problem-3" class="section level2">
 <h2>Problem 3</h2>
-<p>Let <span class="math inline">\(Y|x=a+bx+\epsilon\ where\ a, b\ are constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2\)</span></p>
+<p>Let <span class="math inline">\(Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2\)</span></p>
 <ol style="list-style-type: lower-alpha">
 <li><p>Comptute the <span class="math inline">\(E(Y|x_{0})\)</span></p></li>
 <li><p>Comptute the <span class="math inline">\(Var(Y|x_{0})\)</span></p></li>
