--- a/static/lab/lab01.html
+++ b/static/lab/lab01.html
@@ -322,45 +322,40 @@ $(document).ready(function () {
 
 <div id="problem-1" class="section level2">
 <h2>Problem 1</h2>
-<p>Let <span class="math inline">\(X_{1},X_{2},X_{3}\sim iid\ N\left(0,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3\)</span></p>
+<p>Let <span class="math inline">\(X_{1},X_{2},X_{3}\sim iid\ N\left(\mu,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3\)</span></p>
 <ol style="list-style-type: lower-alpha">
 <li>Specify the probability distribution of <span class="math inline">\(Z_{i}\)</span> along with the value(s) of parameter(s).</li>
 </ol>
+<p><span class="math inline">\(Z_{i}\sim iid\ N\left(0,1\right)\)</span></p>
 <p>Let <span class="math inline">\(Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})\)</span></p>
 <ol style="list-style-type: lower-alpha">
-<li><p>Comptute the <span class="math inline">\(E(Y_{1})\)</span></p></li>
-<li><p>Comptute the <span class="math inline">\(Var(Y_{1})\)</span></p></li>
-<li><p>Specify the probability distribution of <span class="math inline">\(Y_{1}\)</span> along with the value(s) of parameter(s).</p></li>
-<li><p>Specify the probability distribution of <span class="math inline">\(Z_{i}^2\)</span> along with the value(s) of parameter(s).</p></li>
-</ol>
-<p>Let <span class="math inline">\(Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2\)</span></p>
-<ol style="list-style-type: lower-alpha">
-<li>Specify the probability distribution of <span class="math inline">\(Y_{2}\)</span> along with the value(s) of parameter(s).</li>
+<li><p>Comptute the <span class="math inline">\(E(Y_{1})=0\)</span></p></li>
+<li><p>Comptute the <span class="math inline">\(Var(Y_{1})=3\)</span></p></li>
+<li><p>Specify the probability distribution of <span class="math inline">\(Y_{1}\sim iid\ N(0,3)\)</span> along with the value(s) of parameter(s).</p></li>
+<li><p>Specify the probability distribution of <span class="math inline">\(Z_{i}^2\sim\chi_{1}^2\)</span> along with the value(s) of parameter(s).</p>
+<p>Let <span class="math inline">\(Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2\)</span></p></li>
+<li><p>Specify the probability distribution of <span class="math inline">\(Y_{2}\sim\chi_{3}^2\)</span> along with the value(s) of parameter(s).</p></li>
 </ol>
 </div>
 <div id="problem-2" class="section level2">
 <h2>Problem 2</h2>
 <p>Let <span class="math inline">\(X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}\)</span></p>
 <ol style="list-style-type: lower-alpha">
-<li>Specify the distribution of <span class="math inline">\(\overline{A}\)</span> along with the value(s) of parameter(s).</li>
-</ol>
+<li><p>Specify the distribution of <span class="math inline">\(\overline{A}\)</span> along with the value(s) of parameter(s). <span class="math inline">\(\overline{A}\sim\ N(0,1)\)</span></p>
 <p>Let <span class="math inline">\(W\sim\chi_{\nu_{1}}^2\)</span> where <span class="math inline">\(\nu_{1}\)</span> is the degrees of freedom, <span class="math inline">\(\overline{X}\ and\ W\)</span> are indipendent.</p>
-<p>Consider the new random variable <span class="math inline">\(\frac{\overline{X}}{\sqrt{W/\nu_{1}}}\)</span></p>
-<ol style="list-style-type: lower-alpha">
-<li>Specify the distribution of this new randome variable along with the value(s) of parameter(s).</li>
-</ol>
+<p>Consider the new random variable <span class="math inline">\(\frac{\overline{X}}{\sqrt{W/\nu_{1}}}\sim t_{\nu_{1}}\)</span></p></li>
+<li><p>Specify the distribution of this new randome variable along with the value(s) of parameter(s).</p>
 <p>Let <span class="math inline">\(V\sim\chi_{\nu_{1}}^2\)</span> where <span class="math inline">\(\nu_{2}\)</span> is the degrees of freedom, <span class="math inline">\(V\ and\ W\)</span> are indipendent.</p>
-<p>Consider the new random variable <span class="math inline">\(\frac{W/\nu_{1}}{V/\nu_{2}}\)</span></p>
-<ol style="list-style-type: lower-alpha">
-<li>Specify the distribution of this new randome variable and provide value(s) of parameter(s).</li>
+<p>Consider the new random variable <span class="math inline">\(\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}\)</span></p></li>
+<li><p>Specify the distribution of this new randome variable and provide value(s) of parameter(s).</p></li>
 </ol>
 </div>
 <div id="problem-3" class="section level2">
 <h2>Problem 3</h2>
 <p>Let <span class="math inline">\(Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2\)</span></p>
 <ol style="list-style-type: lower-alpha">
-<li><p>Comptute the <span class="math inline">\(E(Y|x_{0})\)</span></p></li>
-<li><p>Comptute the <span class="math inline">\(Var(Y|x_{0})\)</span></p></li>
+<li><p>Comptute the <span class="math inline">\(E(Y|x_{0})=a+bx\)</span></p></li>
+<li><p>Comptute the <span class="math inline">\(Var(Y|x_{0})=\sigma^2\)</span></p></li>
 </ol>
 </div>
 
