del usp, rerun server

--- a/static/lecture564/reading02.html
+++ b/static/lecture564/reading02.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2018-10-11" />
+<meta name="date" content="2018-10-22" />
 
 <title>2.2 Least-Suqares Estimation &amp; 2.3 Hypothesis Testing</title>
 
@@ -345,7 +345,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">2.2 Least-Suqares Estimation &amp; 2.3 Hypothesis Testing</h1>
 <h3 class="subtitle"><em>STAT 564 Week 2</em></h3>
-<h4 class="date"><em>October 11, 2018</em></h4>
+<h4 class="date"><em>October 22, 2018</em></h4>
 
 </div>
 
@@ -354,7 +354,11 @@ $(document).ready(function () {
 <h2></h2>
 <div id="estimation-of-sigma2" class="section level3">
 <h3>2.2.3 Estimation of <span class="math inline">\(\sigma^2\)</span></h3>
-<p><code>2018.10.3</code></p>
+<p><code>2018.10.3</code> <span class="math display">\[SSR=\sum_{i=1}^n(\hat y_i-\bar y)^2=\sum_{i=1}^n(\hat\beta_0+\hat\beta_1x_i-\bar y)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}\]</span> <span class="math display">\[S_{yy}=\sum_{i=1}^n(y_i-\bar y)^2=\]</span></p>
+<p><span class="math display">\[E[SSR]=\sigma^2+\hat\beta_1^2S_{xx}\]</span></p>
+<p><span class="math display">\[E[S_{yy}]=(n-1)\sigma^2+\hat\beta_1^2S_{xx}\]</span></p>
+<p><span class="math display">\[E[SSE]=E[S_{yy}]-E[SSR]=(n-2)\sigma^2\]</span></p>
+<p><span class="math display">\[E[MSE]=\frac{E[SSE]}{n-2}=\frac{\sigma^2(n-2)}{n-2}=\sigma^2\]</span></p>
 </div>
 <div id="hypothesis-testing-on-the-slope-and-intercept" class="section level3">
 <h3>2.3 Hypothesis Testing on the Slope and Intercept</h3>
