--- a/static/assignment561/hw06.html
+++ b/static/assignment561/hw06.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Shen Qu" />
 
+<meta name="date" content="2018-11-15" />
 
 <title>STAT561 Fall 2018 HW6</title>
 
@@ -308,7 +309,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">STAT561 Fall 2018 HW6</h1>
 <h4 class="author"><em>Shen Qu</em></h4>
-<h4 class="date"><em>11/8/2018</em></h4>
+<h4 class="date"><em>11/15/2018</em></h4>
 
 </div>
 
@@ -400,50 +401,8 @@ $(document).ready(function () {
 <ol start="2" style="list-style-type: lower-alpha">
 <li><span class="math inline">\(\mu+\sigma\)</span> and <span class="math inline">\(\mu-\sigma\)</span> are the quartiles of the distribution of X, that is, <span class="math inline">\(P(X\ge\mu+\sigma)=P(X\le\mu-\sigma)=1/4\)</span>. (Hint: Prove this first for <span class="math inline">\(\mu=0\)</span> and <span class="math inline">\(\sigma=1\)</span> and then use Exercise 3.38.)</li>
 </ol>
-<p>3.28 Show that each of the following families is an exponential family.</p>
-<ol style="list-style-type: lower-alpha">
-<li>normal family with either parameter <span class="math inline">\(\mu\)</span> or <span class="math inline">\(\sigma\)</span> known</li>
-</ol>
-<hr />
-<ol start="2" style="list-style-type: lower-alpha">
-<li>gamma family with either parameter <span class="math inline">\(\alpha\)</span> or <span class="math inline">\(\beta\)</span> known or both unknown</li>
-</ol>
-<hr />
-<ol start="3" style="list-style-type: lower-alpha">
-<li>beta family with either parameter <span class="math inline">\(\alpha\)</span> or <span class="math inline">\(\beta\)</span> known or both unknown</li>
-</ol>
-<hr />
-<ol start="4" style="list-style-type: lower-alpha">
-<li>Poisson family</li>
-</ol>
-<hr />
-<ol start="5" style="list-style-type: lower-alpha">
-<li>negative binomial family with r known, 0&lt;p&lt;1</li>
-</ol>
-<p><strong>3.33</strong> For each of the following families:</p>
-<ol style="list-style-type: lower-roman">
-<li><p>Verify that it is an exponential family.</p></li>
-<li><p>Describe the curve on which the 9 parameter vector lies.</p></li>
-<li><p>Sketch a graph of the curved parameter space.</p></li>
-</ol>
-<ol style="list-style-type: lower-alpha">
-<li><span class="math inline">\(n(\theta, \theta)\)</span></li>
-</ol>
-<hr />
-<ol start="2" style="list-style-type: lower-alpha">
-<li><span class="math inline">\(n(\theta, a\theta)\)</span>, a known</li>
-</ol>
-<hr />
-<ol start="3" style="list-style-type: lower-alpha">
-<li>gamma(<span class="math inline">\(\alpha, 1/\alpha\)</span>)</li>
-</ol>
-<hr />
-<ol start="4" style="list-style-type: lower-alpha">
-<li><span class="math inline">\(f(x|\theta) = C exp (-(x-\theta)^4)\)</span> , C a normalizing constant</li>
-</ol>
-<p><strong>3.38</strong> Let Z be a random variable with pdf f(z). Define <span class="math inline">\(z_{\alpha}\)</span> to be a number that satisfies this relationship: <span class="math display">\[\alpha= P ( Z &gt; z_{\alpha}) =\int_{z_{\alpha}}^{\infty}f(z)dz.\]</span> Show that if X is a random variable with pdf (<span class="math inline">\(l/\sigma)f((x-\mu)/\sigma\)</span>) and <span class="math inline">\(x_{\alpha}=\sigma z_{\alpha}+\mu\)</span>, then <span class="math inline">\(P(X&gt;x_{\alpha})=\alpha\)</span>. (Thus if a table of <span class="math inline">\(z_{\alpha}\)</span> values were available, then values of <span class="math inline">\(x_{\alpha}\)</span> could be easily computed for any member of the location-scale family.)</p>
 <p>According to Theorem 3.5.6, f(x) is pdf, <span class="math inline">\(\mu,\sigma\in\mathbf{R}\)</span>, <span class="math inline">\(\sigma&gt;0\)</span>. X is a random variable with pdf (<span class="math inline">\(l/\sigma)f((x-\mu)/\sigma\)</span>) when and only when Z is a random variable with pdf f(z) and <span class="math inline">\(X=\sigma Z+\mu\)</span></p>
-<p><span class="math display">\[\therefore P(X&gt;x_{\alpha})=P(\sigma Z+\mu&gt;\sigma z_{\alpha}+\mu)= P(Z&gt;z_{\alpha})=\alpha \]</span></p>
+<p><span class="math display">\[\therefore P(X&gt;x_{\alpha})=P(\sigma Z+\mu&gt;\sigma z_{\alpha}+\mu)= P(Z&gt;z_{\alpha})=\alpha \]</span> <span class="math display">\[\alpha= P ( Z &gt; z_{\alpha}) =\int_{z_{\alpha}}^{\infty}f(z)dz.\]</span></p>
 
 
 
