--- a/static/stat561/note_stat561.html
+++ b/static/stat561/note_stat561.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2018-12-27" />
+<meta name="date" content="2018-12-29" />
 
 <title>Mathematical Statistics I</title>
 
@@ -308,7 +308,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Mathematical Statistics I</h1>
 <h3 class="subtitle"><em>STAT 561</em></h3>
-<h4 class="date"><em>December 27, 2018</em></h4>
+<h4 class="date"><em>December 29, 2018</em></h4>
 
 </div>
 
@@ -906,6 +906,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(p\)</span></td>
 <td><span class="math inline">\(pq\)</span></td>
 <td><span class="math inline">\(pe^t+q\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(Binom(n,p)\)</span></td>
@@ -915,6 +917,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\mu(\mu+q)\)</span></td>
 <td><span class="math inline">\(\mu{q}\)</span></td>
 <td><span class="math inline">\((pe^t+q)^n\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Geom(p)\)</span></td>
@@ -924,6 +928,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\frac{p+2q}{p^2}\)</span></td>
 <td><span class="math inline">\(\frac{q}{p^2}\)</span></td>
 <td><span class="math inline">\(\frac{pe^t}{1-qe^t},t&lt;-\ln{q}\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(Geom2(p)\)</span></td>
@@ -944,6 +950,8 @@ Theorem 1.2.11 (a).<br />
 <td>$ $</td>
 <td><span class="math inline">\(\frac{rq}{p^2}\)</span></td>
 <td><span class="math inline">\((\frac{pe^t}{1-qe^t})^r\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(NBin2(r,p)\)</span></td>
@@ -953,6 +961,8 @@ Theorem 1.2.11 (a).<br />
 <td>$ $</td>
 <td><span class="math inline">\(\frac{rq}{p^2}\)</span></td>
 <td><span class="math inline">\((\frac{p}{1-qe^t})^r, qe^t&lt;1\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Hgeom(N,m,k)\)</span></td>
@@ -961,6 +971,9 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\frac{km}{N}\)</span></td>
 <td>$ $</td>
 <td><span class="math inline">\(\mu\frac{(N-m)(N-k)}{N(N-1)}\)</span></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(Hgeom(w,b,k)\)</span></td>
@@ -969,6 +982,9 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\frac{kw}{w+b}\)</span></td>
 <td>$ $</td>
 <td><span class="math inline">\(\mu\frac{b(w+b-k)}{(w+b)(w+b-1)}\)</span></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Pois(\mu)\)</span></td>
@@ -989,6 +1005,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\frac{(n+1)(2n+1)}{6}\)</span></td>
 <td><span class="math inline">\(\frac{(n^2-1)}{12}\)</span></td>
 <td><span class="math inline">\(\frac{\sum_{i=1}^n{e^{ti}}}n\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Unif(a,b)\)</span></td>
@@ -998,6 +1016,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\frac{(b^2+ab+a^2)}{3}\)</span></td>
 <td><span class="math inline">\(\frac{(b-a)^2}{12}\)</span></td>
 <td><span class="math inline">\(\frac{e^{tb}-e^{ta}}{t(b-a)}\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(N(\mu,\sigma^2)\)</span></td>
@@ -1018,6 +1038,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(1\)</span></td>
 <td><span class="math inline">\(1\)</span></td>
 <td><span class="math inline">\(e^{\frac{t^2}2}\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(\mathcal{LN}(\mu,\sigma^2)\)</span></td>
@@ -1027,6 +1049,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(e^{2\mu+2\sigma^2}\)</span></td>
 <td><span class="math inline">\(\theta^2(e^{\sigma^2}-1)\)</span></td>
 <td><span class="math inline">\(\times\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Cauchy(\theta,\sigma^2)\)</span></td>
@@ -1036,6 +1060,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\theta\pm\sigma{quartiles}\)</span></td>
 <td><span class="math inline">\(\times\)</span></td>
 <td>$ $</td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(DExpo(\mu,\sigma^2)\)</span></td>
@@ -1046,6 +1072,7 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(2\sigma^2\)</span></td>
 <td><span class="math inline">\(\frac{e^{\mu t}}{1-\sigma^2t^2}\)</span></td>
 <td><span class="math inline">\(\frac{e^{\mu t}(\mu-\mu\sigma^2t^2+2\sigma^2t)}{(1-\sigma^2t^2)^2}\)</span></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Expo(\lambda)\)</span></td>
@@ -1055,6 +1082,8 @@ Theorem 1.2.11 (a).<br />
 <td>$ $</td>
 <td><span class="math inline">\(\frac{1}{\lambda^2}\)</span></td>
 <td><span class="math inline">\(\frac{\lambda}{\lambda - t}, t &lt; \lambda\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(Expo2(\beta)\)</span></td>
@@ -1075,6 +1104,8 @@ Theorem 1.2.11 (a).<br />
 <td></td>
 <td><span class="math inline">\(\frac{a}{\lambda^2}\)</span></td>
 <td><span class="math inline">\((\frac{\lambda}{\lambda - t})^a, t &lt; \lambda\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(Gam2(\alpha,\beta)\)</span></td>
@@ -1096,6 +1127,7 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\Gamma(\alpha+1)=\alpha\Gamma(\alpha)\)</span></td>
 <td><span class="math inline">\(\Gamma(-\frac12)=-2\Gamma(\frac12)\)</span></td>
 <td><span class="math inline">\(\Gamma(0)=\Gamma(-1)=\infty\)</span></td>
+<td></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(B(\alpha,\beta)=\)</span></td>
@@ -1103,6 +1135,10 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(\int_0^1 t^{\alpha-1}(1-t)^{\beta-1}dt\)</span></td>
 <td>$ $</td>
 <td>$ $</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(Beta(a, b)\)</span></td>
@@ -1123,6 +1159,8 @@ Theorem 1.2.11 (a).<br />
 <td><span class="math inline">\(2p+p^2\)</span></td>
 <td><span class="math inline">\(2p\)</span></td>
 <td><span class="math inline">\((1-2t)^{-\frac{p}2}, t&lt;\frac12\)</span></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(t_n\)</span></td>
@@ -1132,6 +1170,8 @@ Theorem 1.2.11 (a).<br />
 <td>$ $</td>
 <td><span class="math inline">\(\frac{n}{n-2},n&gt;2\)</span></td>
 <td><span class="math inline">\(\times\)</span></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table>
@@ -1508,7 +1548,7 @@ Theorem 1.2.11 (a).<br />
 <p><strong>Theorem 4.1.6</strong> Let (X,Y) be a discrete bivariate random vector with joint pmf <span class="math inline">\(f_{X,Y}(x,y)\)</span>. Then the marginal pmfs of X and Y, <span class="math inline">\(f_X(x)=P(X=x)\)</span> and <span class="math inline">\(f_Y(y)=P(Y=y)\)</span>, are given by</p>
 <p><span class="math inline">\(f_X(x)=\sum_{y\in\mathbf{R}}f_{X,Y}(x,y)\)</span> and <span class="math inline">\(f_Y(y)=\sum_{x\in\mathbf{R}}f_{X,Y}(x,y)\)</span></p>
 <p><strong>Definition 4.1.10</strong> A function f(x,y) from <span class="math inline">\(\mathbf{R^2}\)</span> into <span class="math inline">\(\mathbf{R}\)</span> is called a joint probability density function or joint pdf of the continuous bivariate random vector (X,Y) if, for every <span class="math inline">\(A\subset\mathbf{R^2}\)</span>,</p>
-<p><span class="math display">\[P((X,Y)\in A)=\int_A\int f(x,y)dxdy\]</span>.</p>
+<p><span class="math display">\[P((X,Y)\in A)=\iint_A f(x,y)dxdy\]</span>.</p>
 <p><span class="math display">\[Eg(X,Y)=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x, y)f(x, y) dx dy\]</span>.</p>
 </div>
 <div id="conditional-distributions-and-independence" class="section level3">
