--- a/static/stat564/note_stat564.html
+++ b/static/stat564/note_stat564.html
@@ -313,7 +313,7 @@ $(document).ready(function () {
 </div>
 
 
-<div id="section" class="section level1">
+<div id="section" class="section level1 tabset tabset-fade tabset-pills">
 <h1></h1>
 <div id="model" class="section level2">
 <h2>Model</h2>
