--- a/static/stat563/qe_math_stat.html
+++ b/static/stat563/qe_math_stat.html
@@ -4500,6 +4500,175 @@ div.tocify {
 <div id="references" class="section level1">
 <h1>References</h1>
 
+
+<table>
+<colgroup>
+<col width="7%"></col>
+<col width="23%"></col>
+<col width="23%"></col>
+<col width="15%"></col>
+<col width="30%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th><span class="math inline">\(D\)</span></th>
+<th><span class="math inline">\(E;V;EX^2\)</span></th>
+<th><span class="math inline">\(f(x);F(x)\)</span></th>
+<th><span class="math inline">\(MLE;T;I\)</span></th>
+<th><span class="math inline">\(M_x(t);M'(t);M''(t);M^n(t)\)</span></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><span class="math inline">\(Bern(p)\)</span></td>
+<td><span class="math inline">\(p\)</span>;<span class="math inline">\(p\)</span>;<span class="math inline">\(pq\)</span></td>
+<td><span class="math inline">\(p^xq^{1-x},x=1,0\)</span></td>
+<td><span class="math inline">\(\bar X\)</span>;<span class="math inline">\(\sum x_i\sim Bino(np)\)</span>;<span class="math inline">\(n/\theta(\theta-1)\)</span></td>
+<td><span class="math inline">\(pe^t+q\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Bino(n,p)\)</span></td>
+<td><span class="math inline">\(np\)</span>;<span class="math inline">\(np(np+q)\)</span>;<span class="math inline">\(npq\)</span></td>
+<td><span class="math inline">\(\binom{n}{x}p^x q^{n-x}\)</span>,<span class="math inline">\(x=0,1..n\)</span>;<span class="math inline">\(I_{1-p}(n-x,x+1)\)</span></td>
+<td></td>
+<td><span class="math inline">\((pe^t+q)^n\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(Geom(p)\)</span></td>
+<td><span class="math inline">\(1/p\)</span>;<span class="math inline">\({(p+2q)}/{p^2}\)</span>;<span class="math inline">\(q/p^2\)</span></td>
+<td><span class="math inline">\(pq^{x-1}\)</span>,<span class="math inline">\(x=1,2,..\)</span>;<span class="math inline">\(1-q^x\)</span></td>
+<td><span class="math inline">\(1/\bar X\)</span>;<span class="math inline">\(\sum x_i\)</span>;</td>
+<td><span class="math inline">\(\frac{pe^t}{1-qe^t},t&lt;-\ln{q}\)</span>;<span class="math inline">\(\frac{pqe^t}{(1-qe^t)^2}\)</span>;<span class="math inline">\(\frac{2pqe^t}{(1-qe^t)^3}-M'(t)\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(NBino(r,p)\)</span></td>
+<td><span class="math inline">\(r/p\)</span>; ;<span class="math inline">\(rq/p^2\)</span></td>
+<td><span class="math inline">\(\binom{x-1}{r-1}p^rq^{x-r}\)</span>,<span class="math inline">\(x=r,r+1..\)</span></td>
+<td></td>
+<td><span class="math inline">\((\frac{pe^t}{1-qe^t})^r\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(HGeom(N,m,k)\)</span></td>
+<td><span class="math inline">\(\frac{km}N\)</span>; ;<span class="math inline">\(\mu\frac{(N-m)(N-k)}{N(N-1)}\)</span></td>
+<td><span class="math inline">\({\binom{m}{x}\binom{N-m}{k-x}}/{\binom{N}{k}}\)</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Pois(\mu)\)</span></td>
+<td><span class="math inline">\(\mu\)</span>;<span class="math inline">\(\mu\)</span>;<span class="math inline">\(\mu^2+\mu\)</span></td>
+<td><span class="math inline">\(\frac{\mu^x}{x!}e^{-\mu}\)</span>,<span class="math inline">\(x=0,1..\)</span>;<span class="math inline">\(e^{-\mu}\sum_{i=0}^x\frac{\mu^i}{i!}\)</span></td>
+<td><span class="math inline">\(\bar X\)</span>;<span class="math inline">\(\sum x_i\)</span>;<span class="math inline">\(n/\mu\)</span></td>
+<td><span class="math inline">\(e^{\mu(e^t-1)}\)</span>;<span class="math inline">\(\mu e^tM(t)\)</span>;<span class="math inline">\(\mu e^t(1+\mu e^t)M(t)\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(Unif(n)\)</span></td>
+<td><span class="math inline">\(\frac{n+1}2\)</span>;<span class="math inline">\(\frac{(n+1)(2n+1)}{6}\)</span>;<span class="math inline">\(\frac{(n^2-1)}{12}\)</span></td>
+<td><span class="math inline">\(\frac{1}n\)</span>,<span class="math inline">\(x=1,2..n\)</span></td>
+<td></td>
+<td><span class="math inline">\(\sum_{i=1}^n{e^{ti}}/n\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Unif(a,b)\)</span></td>
+<td><span class="math inline">\(\frac{a+b}{2}\)</span>; ;<span class="math inline">\(\frac{(b-a)^2}{12}\)</span></td>
+<td><span class="math inline">\(frac{1}{b-a}\)</span>,<span class="math inline">\(x\in(a,b)\)</span>;<span class="math inline">\(\frac{x-a}{b-a}\)</span></td>
+<td></td>
+<td><span class="math inline">\(\frac{e^{tb}-e^{ta}}{t(b-a)}\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(Norm(\mu,\sigma^2)\)</span></td>
+<td><span class="math inline">\(\mu\)</span>;<span class="math inline">\(\mu^2+\sigma^2\)</span>;<span class="math inline">\(\sigma^2\)</span></td>
+<td><span class="math inline">\(\frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(x-\mu)^2}{2\sigma^2}}\)</span></td>
+<td></td>
+<td><span class="math inline">\(e^{\mu t +\frac{\sigma^2t^2}2}\)</span>; <span class="math inline">\((\mu+\sigma^2t)M(t)\)</span>;<span class="math inline">\([(\mu+\sigma^2t)^2+\sigma^2]M(t)\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(SNorm(0,1)\)</span></td>
+<td><span class="math inline">\(0\)</span>;<span class="math inline">\(1\)</span>;<span class="math inline">\(1\)</span></td>
+<td><span class="math inline">\(\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}2}\)</span></td>
+<td></td>
+<td><span class="math inline">\(e^{\frac{t^2}2}\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(LNorm(\mu,\sigma^2)\)</span></td>
+<td><span class="math inline">\(e^{\mu+\frac{\sigma^2}2}\)</span>;<span class="math inline">\(e^{2\mu+2\sigma^2}\)</span>;<span class="math inline">\(E^2X(e^{\sigma^2}-1)\)</span></td>
+<td><span class="math inline">\(\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}\)</span></td>
+<td></td>
+<td><span class="math inline">\(e^{n\mu+n^2\sigma^2/2}\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Cauchy(\theta,\sigma^2)\)</span></td>
+<td></td>
+<td><span class="math inline">\(\frac{1}{\pi\sigma}\frac1{1+(\frac{x-\theta}{\sigma})^2}\)</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(DExpo(\mu,\sigma^2)\)</span></td>
+<td><span class="math inline">\(\mu\)</span>;<span class="math inline">\(\mu^2+2\sigma^2\)</span>;<span class="math inline">\(2\sigma^2\)</span></td>
+<td><span class="math inline">\(\frac{1}{2\pi\sigma} e^{-|\frac{x-\mu}{\sigma}|}\)</span></td>
+<td></td>
+<td><span class="math inline">\(\frac{e^{\mu t}}{1-\sigma^2t^2}\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Expo(\beta)\)</span></td>
+<td><span class="math inline">\(\beta\)</span>; ;<span class="math inline">\(\beta^2\)</span></td>
+<td><span class="math inline">\(\frac1{\beta} e^{-\frac{x}\beta},x \in (0,\infty)\)</span>;<span class="math inline">\(1-e^{-\lambda x}\)</span></td>
+<td><span class="math inline">\(1/\bar X\)</span>;<span class="math inline">\(\sum x_i\)</span>;</td>
+<td><span class="math inline">\(\frac{\lambda}{\lambda-t},t&lt;\lambda\)</span>,<span class="math inline">\(\frac{1}{1-\beta t}\)</span>;<span class="math inline">\(\beta(1-\beta t)^{-2}\)</span>;<span class="math inline">\(2\beta^2(1-\beta t)^{-3}\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(Gamm(\alpha,\beta)\)</span></td>
+<td><span class="math inline">\(\alpha\beta\)</span>; ;<span class="math inline">\(\alpha\beta^2\)</span>;</td>
+<td><span class="math inline">\(\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}\)</span></td>
+<td></td>
+<td><span class="math inline">\((\frac{1}{1-\beta t})^a, t &lt;\frac1\beta\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Beta(a,b)\)</span></td>
+<td><span class="math inline">\(\frac{a}{a+b}\)</span>;<span class="math inline">\(\frac{a(a+1)}{(a+b)(a+b+1)}\)</span>;<span class="math inline">\(\frac{ab}{(a+b)^2(a+b+1)}\)</span></td>
+<td><span class="math inline">\(\frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)}x^{a-1}(1-x)^{b-1}\)</span></td>
+<td></td>
+<td><span class="math inline">\(B(\alpha,\beta)=\frac{\Gamma(\alpha)\Gamma(\beta)}{\Gamma(\alpha+\beta)}\)</span>,<span class="math inline">\(x\in(0,1)\)</span>;<span class="math inline">\(\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(\chi_p^2\)</span></td>
+<td><span class="math inline">\(p\)</span>;<span class="math inline">\(2p+p^2\)</span>;<span class="math inline">\(2p\)</span></td>
+<td><span class="math inline">\(\frac{x^{\frac{p}2-1}}{\Gamma \frac{p}2 2^{\frac{p}2}}e^{-\frac{x}2}\)</span></td>
+<td>;<span class="math inline">\(\sum\ln x_i\)</span>;</td>
+<td><span class="math inline">\((1-2t)^{-p/2}, t&lt;\frac12\)</span></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(t_p\)</span></td>
+<td><span class="math inline">\(0,p&gt;1\)</span>; ;<span class="math inline">\(\frac{p}{p-2},p&gt;2\)</span></td>
+<td><span class="math inline">\(\frac{\Gamma(\frac{p+1}2)}{\Gamma(\frac{p}2)\sqrt{p\pi}}(1+\frac{x^2}{p})^{-\frac{p+1}2}\)</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(F\)</span></td>
+<td><span class="math inline">\(\frac{q}{q-2},q&gt;2\)</span>;;<span class="math inline">\(2(\frac{q}{q-2})^2\frac{p+q-2}{p(q-4)},q&gt;4\)</span></td>
+<td><span class="math inline">\(\frac{\Gamma(\frac{p+q}2)}{\Gamma(\frac{p}2)\Gamma (\frac{q}2)}(\frac{p}q)^{\frac{p}2}\frac{x^{\frac{p}2-1}}{(1+\frac{p}qx)^{\frac{p+q}2}}\)</span>,<span class="math inline">\(x&gt;0\)</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(Arcsine\)</span></td>
+<td><span class="math inline">\(\frac{1}2\)</span>; ;<span class="math inline">\(\frac{1}8\)</span></td>
+<td><span class="math inline">\(\frac{1}{\pi\sqrt{x(1-x)}}\)</span>,<span class="math inline">\(x\in[0,1]\)</span>;<span class="math inline">\(\frac{1}{\pi\arcsin\sqrt x}\)</span></td>
+<td></td>
+<td><span class="math inline">\(Beta(\frac{1}2,\frac{1}2)\)</span></td>
+</tr>
+<tr class="odd">
+<td><span class="math inline">\(Dirichlet\)</span></td>
+<td><span class="math inline">\(\frac{a_i}{\sum_ka_k}\)</span><span class="math inline">\(\sum_{i=1}^kx_i=1\)</span>;;<span class="math inline">\(\frac{a_i(a_0-a_i)}{a_0^2(a_0+1)}\)</span></td>
+<td><span class="math inline">\(\frac1{B(a)}\Pi_{i=1}^kx_i^{a_i-1}\)</span>,<span class="math inline">\(x\in(0,1)\)</span>,<span class="math inline">\(B(a)=\frac{\Pi_{i=1}^k\Gamma(a_i)}{\Gamma(\sum_{i=1}^ka_i)}\)</span></td>
+<td></td>
+<td><span class="math inline">\(Cov(X_i,X_j)=\frac{-a_ia_j}{a_0^2(a_0+1)}\)</span>,<span class="math inline">\(a_0=\sum_{i=1}^ka_i\)</span></td>
+</tr>
+</tbody>
+</table>
+
 </div>
 
 
