--- a/static/stat566/qe_applied_stat_inclass.html
+++ b/static/stat566/qe_applied_stat_inclass.html
@@ -1565,7 +1565,7 @@ div.tocify {
 <h2>2015F</h2>
 <div id="f1" class="section level3">
 <h3>2015F1</h3>
-<p><a href="#s1">2016S1</a> [566-HW2-6]</p>
+<p><a href="#s1">2016S1</a> [566-HW2-6] [8.3 The One-Quarter Fraction of the 2k Design p.344]</p>
 <p>You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 2 blocks. You may assume that 4-way and higher interactions are not important.</p>
 <p>Show all of the following:</p>
 <ul>
@@ -1769,8 +1769,8 @@ div.tocify {
 <ul>
 <li>the eight runs to be done on each day</li>
 </ul>
-<p>Day1: (1), bef, bc, abce, adef, abd, cde, bcdf</p>
-<p>Day2: ae, abf, cef, acf, df, bde, acd, abcdef</p>
+<p>Day1: abd, acf, bef, cde, abf, acd, bde, cef</p>
+<p>Day2: (1), abce, adef, bcdf, ae, bc, df, abcdef</p>
 <ul>
 <li>the effects to be confounded with blocks</li>
 </ul>
@@ -1837,7 +1837,7 @@ div.tocify {
 </div>
 <div id="f2" class="section level3">
 <h3>2015F2</h3>
-<p><a href="#f1-2">2017F1</a></p>
+<p><a href="#f1-2">2017F1</a> [Example 8.2 The Tool Life Data]</p>
 <p>A company is comparing two different methods of processing their raw material. They begin with 8 batches of material, which are randomly assigned to one of the two processes. The quality of the final product is measured on a 50-point scale. There is some concern that the outside temperature on each day might have an effect on the product (and the effect might be different for the two processes), and so it is recorded so that it can be taken into account. The following table shows and ordered pair for each batch, consisting of the quality measurement and the temperature.</p>
 <table style="width:36%;">
 <colgroup>
@@ -1868,11 +1868,13 @@ div.tocify {
 <ol start="3" style="list-style-type: lower-alpha">
 <li>Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?</li>
 </ol>
-<p><span class="math inline">\(H_0: \beta_1=\gamma_1\)</span>, <span class="math inline">\(y_i=\beta_0+\beta_1x_i+w_i\gamma_0+\varepsilon_i\)</span></p>
-<p><span class="math display">\[\begin{bmatrix} 45\\40\\41\\41\\42\\37\\41\\35\end{bmatrix}_{8\times1}=\begin{bmatrix} 1&amp;81&amp;0&amp;0\\1&amp;68&amp;0&amp;0\\1&amp;77&amp;0&amp;0\\1&amp;61&amp;0&amp;0\\1&amp;59&amp;1&amp;59\\1&amp;62&amp;1&amp;62\\1&amp;83&amp;1&amp;83\\1&amp;70&amp;1&amp;70\end{bmatrix}_{8\times3} 
+<p>To test the hypothesis that the two regression lines are identical <span class="math inline">\((H_0:\gamma_0=\gamma_1=0)\)</span>,</p>
+<p>To test the hypothesis that the two lines have different intercepts and a common slope <span class="math inline">\((H_0:\gamma_1=0)\)</span>,</p>
+<p><span class="math inline">\(H_0: \gamma_1=0\)</span>, <span class="math inline">\(y_i=\beta_0+\beta_1x_i+w_i\gamma_0+\varepsilon_i\)</span></p>
+<p><span class="math display">\[\begin{bmatrix} 45\\40\\41\\41\\42\\37\\41\\35\end{bmatrix}_{8\times1}=\begin{bmatrix} 1&amp;81&amp;0\\1&amp;68&amp;0\\1&amp;77&amp;0\\1&amp;61&amp;0\\1&amp;59&amp;1\\1&amp;62&amp;1\\1&amp;83&amp;1\\1&amp;70&amp;1\end{bmatrix}_{8\times3}\times
 \begin{bmatrix} \beta_0 \\ \beta_1 \\ \gamma_0\end{bmatrix}_{3\times1}
 +\begin{bmatrix} \varepsilon_1\\\varepsilon_2\\\varepsilon_3\\\varepsilon_4\\\varepsilon_5\\\varepsilon_6\\\varepsilon_7\\\varepsilon_8\end{bmatrix}_{8\times1}\]</span></p>
-<p><span class="math inline">\(\frac{8-3}{8-4}\)</span></p>
+<p><span class="math inline">\(\frac{3}{8-4}\)</span></p>
 </div>
 <div id="f3" class="section level3">
 <h3>2015F3</h3>
@@ -1895,6 +1897,7 @@ div.tocify {
 <p>Fountain, Tableman*</p>
 <div id="s1" class="section level3">
 <h3>2016S1</h3>
+<p>[7.6 Confouding the 2k Factorial Design in Four Blocks]</p>
 <p>You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 4 blocks. You may assume that 4-way and higher interactions are not important.</p>
 <p>Show all of the following:</p>
 <ul>
@@ -3317,6 +3320,7 @@ run;</code></pre>
 </div>
 <div id="sd2" class="section level3">
 <h3>2017SD2</h3>
+<p>[8.3 The One-Quarter Fraction of the 2k Design p.344] [7.7 table 7.9]</p>
 <p>Given a Blocked <span class="math inline">\(2^{6-2}\)</span> design with Factors [A,B,C,D,E,F],Generators E=ABC, F=BCD and Defining Contrasts AB, CD</p>
 <ol style="list-style-type: decimal">
 <li>How many blocks are included in this design?</li>
@@ -3325,7 +3329,7 @@ run;</code></pre>
 <ol start="2" style="list-style-type: decimal">
 <li>What is the Defining Relationship in this design?</li>
 </ol>
-<p>I=ABCE=BCDF=ADEF</p>
+<p>generating relations I=ABCE=BCDF=ADEF</p>
 <ol start="3" style="list-style-type: decimal">
 <li>What is the Resolution of this Design?</li>
 </ol>
@@ -3335,7 +3339,7 @@ run;</code></pre>
 </ol>
 <p>AE=BC=ABCDEF=DF</p>
 <ol start="5" style="list-style-type: decimal">
-<li>Show the effect on two-way interactions that include A, if you augment by folding on A</li>
+<li>Show the effect on two-way interactions that include A, if you augment by <strong>folding</strong> on A [8.5.2]</li>
 </ol>
 <p>I=-ABCE=BCDF=-ADEF</p>
 <p>AB=-CE=ACDF=-BDEF</p>
@@ -3402,6 +3406,9 @@ run;</code></pre>
 <li>Explain the difference between crossed and nested effects in an experimental design. Give an example to illustrate your explanation. Make sure to discuss which terms would be absent from the model, and the resulting effect on sums of squares and degrees of freedom in the ANOVA table.</li>
 </ol>
 <p><a href="https://www.theanalysisfactor.com/the-difference-between-crossed-and-nested-factors/" class="uri">https://www.theanalysisfactor.com/the-difference-between-crossed-and-nested-factors/</a></p>
+<p>Two factors are crossed when every category of one factor co-occurs in the design with every category of the other factor. In other words, there is at least one observation in every combination of categories for the two factors.</p>
+<p>A factor is nested within another factor when each category of the first factor co-occurs with only one category of the other. In other words, an observation has to be within one category of Factor 2 in order to have a specific category of Factor 1. All combinations of categories are not represented.</p>
+<p>If two factors are crossed, you can calculate an interaction. If they are nested, you cannot because you do not have every combination of one factor along with every combination of the other.</p>
 </div>
 <div id="f3-2" class="section level3">
 <h3>2017F3</h3>
@@ -3483,10 +3490,27 @@ run;</code></pre>
 </tbody>
 </table>
 <ol style="list-style-type: lower-alpha">
-<li><p>Write an appropriate model for the situation described above, allowing for different slopes and different intercepts for the three workshops. Hint: there are 12 observations, and you will need to use at least one indicator variable.</p></li>
-<li><p>Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.</p></li>
-<li><p>Suppose that you wish to test for equality of the three slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?</p></li>
+<li>Write an appropriate model for the situation described above, allowing for different slopes and different intercepts for the three workshops. Hint: there are 12 observations, and you will need to use at least one indicator variable.</li>
 </ol>
+<p>WorkshopA: <span class="math inline">\(y_i=\beta_0+\beta_1x_i+\varepsilon_i\)</span>,<span class="math inline">\(1\le i\le4\)</span>;</p>
+<p>WorkshopB: <span class="math inline">\(y_i=\gamma_0+\gamma_1x_i+\varepsilon_i\)</span>,<span class="math inline">\(5\le i\le8\)</span>;</p>
+<p>WorkshopC: <span class="math inline">\(y_i=\gamma_0+\gamma_1x_i+\varepsilon_i\)</span>,<span class="math inline">\(9\le i\le12\)</span>;</p>
+<p>Let <span class="math inline">\(w_{1i}=\begin{cases}1&amp; 1\le i\le4\\0&amp; 5\le i\le8\\0&amp;9\le i\le12\end{cases}\)</span>, <span class="math inline">\(w_{2i}=\begin{cases}0&amp; 1\le i\le4\\1&amp; 5\le i\le8\\0&amp;9\le i\le12\end{cases}\)</span>, <span class="math inline">\(w_{3i}=\begin{cases}0&amp; 1\le i\le4\\0&amp; 5\le i\le8\\1&amp;9\le i\le12\end{cases}\)</span></p>
+<p>overall <span class="math inline">\(y_i=w_{1i}(\beta_0+\beta_1x_i)+w_{2i}(\gamma_0+\gamma_1x_i)+w_{3i}(\delta_0+\delta_1x_i)+\varepsilon_i\)</span></p>
+<ol start="2" style="list-style-type: lower-alpha">
+<li>Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.</li>
+</ol>
+<p><span class="math display">\[\begin{bmatrix} 70\\70\\68\\72\\75\\74\\72\\71\\72\\72\\73\\73\end{bmatrix}_{12\times1}=\begin{bmatrix} 1&amp;58&amp;0&amp;0&amp;0&amp;0\\1&amp;62&amp;0&amp;0&amp;0&amp;0\\1&amp;60&amp;0&amp;0&amp;0&amp;0\\1&amp;65&amp;0&amp;0&amp;0&amp;0\\0&amp;0&amp;1&amp;60&amp;0&amp;0\\0&amp;0&amp;1&amp;62&amp;0&amp;0\\0&amp;0&amp;1&amp;60&amp;0&amp;0\\0&amp;0&amp;1&amp;60&amp;0&amp;0\\0&amp;0&amp;0&amp;0&amp;1&amp;66\\0&amp;0&amp;0&amp;0&amp;1&amp;62\\0&amp;0&amp;0&amp;0&amp;1&amp;61\\0&amp;0&amp;0&amp;0&amp;1&amp;65\end{bmatrix}_{12\times6}\times
+\begin{bmatrix} \beta_0 \\ \beta_1 \\ \gamma_0 \\ \gamma_1 \\ \delta_0 \\ \delta_1\end{bmatrix}_{6\times1}
++\begin{bmatrix} \varepsilon_1\\\varepsilon_2\\\varepsilon_3\\\varepsilon_4\\\varepsilon_5\\\varepsilon_6\\\varepsilon_7\\\varepsilon_8\\\varepsilon_9\\\varepsilon_{10}\\\varepsilon_{11}\\\varepsilon_{12}\end{bmatrix}_{12\times1}\]</span></p>
+<ol start="3" style="list-style-type: lower-alpha">
+<li>Suppose that you wish to test for equality of the three slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?</li>
+</ol>
+<p><span class="math inline">\(H_0: \gamma_1=\delta_1=0\)</span>, <span class="math inline">\(y_i=w_{1i}\beta_0+\beta_1x_i+w_{2i}\gamma_0+w_{3i}\delta_0+\varepsilon_i\)</span>,</p>
+<p><span class="math inline">\(w_{1i}=\begin{cases}1&amp; 1\le i\le4\\0&amp; 5\le i\le8\\0&amp;9\le i\le12\end{cases}\)</span>, <span class="math inline">\(w_{2i}=\begin{cases}0&amp; 1\le i\le4\\1&amp; 5\le i\le8\\0&amp;9\le i\le12\end{cases}\)</span>, <span class="math inline">\(w_{3i}=\begin{cases}0&amp; 1\le i\le4\\0&amp; 5\le i\le8\\1&amp;9\le i\le12\end{cases}\)</span></p>
+<p><span class="math display">\[\begin{bmatrix} 70\\70\\68\\72\\75\\74\\72\\71\\72\\72\\73\\73\end{bmatrix}_{12\times1}=\begin{bmatrix} 1&amp;58&amp;0&amp;0\\1&amp;62&amp;0&amp;0\\1&amp;60&amp;0&amp;0\\1&amp;65&amp;0&amp;0\\0&amp;60&amp;1&amp;0\\0&amp;62&amp;1&amp;0\\0&amp;60&amp;1&amp;0\\0&amp;60&amp;1&amp;0\\0&amp;66&amp;0&amp;1\\0&amp;62&amp;0&amp;1\\0&amp;61&amp;0&amp;1\\0&amp;65&amp;0&amp;1\end{bmatrix}_{12\times4}\times
+\begin{bmatrix} \beta_0 \\ \beta_1 \\ \gamma_0 \\ \delta_0 \end{bmatrix}_{4\times1}
++\begin{bmatrix} \varepsilon_1\\\varepsilon_2\\\varepsilon_3\\\varepsilon_4\\\varepsilon_5\\\varepsilon_6\\\varepsilon_7\\\varepsilon_8\\\varepsilon_9\\\varepsilon_{10}\\\varepsilon_{11}\\\varepsilon_{12}\end{bmatrix}_{12\times1}\]</span></p>
 </div>
 <div id="s2-1" class="section level3">
 <h3>2018S2</h3>
@@ -4208,11 +4232,11 @@ run;</code></pre>
 <ol start="3" style="list-style-type: lower-alpha">
 <li>Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?</li>
 </ol>
-<p><span class="math inline">\(H_0: \beta_1=\gamma_1\)</span>, <span class="math inline">\(y_i=\beta_0+\beta_1x_i+w_i\gamma_0+\varepsilon_i\)</span></p>
-<p><span class="math display">\[\begin{bmatrix} 38\\55\\40\\45\\36\\30\\42\\30\\30\\41\end{bmatrix}_{10\times1}=\begin{bmatrix} 1&amp;70&amp;0\\1&amp;70&amp;0\\1&amp;68&amp;0\\1&amp;72&amp;0\\1&amp;72&amp;0\\1&amp;75&amp;1\\1&amp;74&amp;1\\1&amp;72&amp;1\\1&amp;71&amp;1\\1&amp;73&amp;1\\\end{bmatrix}_{10\times3} 
+<p><span class="math inline">\(H_0: \gamma_1=0\)</span>, <span class="math inline">\(y_i=\beta_0+\beta_1x_i+w_i\gamma_0+\varepsilon_i\)</span></p>
+<p><span class="math display">\[\begin{bmatrix} 38\\55\\40\\45\\36\\30\\42\\30\\30\\41\end{bmatrix}_{10\times1}=\begin{bmatrix} 1&amp;70&amp;0\\1&amp;70&amp;0\\1&amp;68&amp;0\\1&amp;72&amp;0\\1&amp;72&amp;0\\1&amp;75&amp;1\\1&amp;74&amp;1\\1&amp;72&amp;1\\1&amp;71&amp;1\\1&amp;73&amp;1\\\end{bmatrix}_{10\times3}\times
 \begin{bmatrix} \beta_0 \\ \beta_1 \\ \gamma_0\end{bmatrix}_{3\times1}
 +\begin{bmatrix} \varepsilon_1\\\varepsilon_2\\\varepsilon_3\\\varepsilon_4\\\varepsilon_5\\\varepsilon_6\\\varepsilon_7\\\varepsilon_8\\\varepsilon_9\\\varepsilon_{10}\end{bmatrix}_{10\times1}\]</span></p>
-<p><span class="math inline">\(\frac{10-3}{10-4}\)</span></p>
+<p><span class="math inline">\(\frac{3}{10-4}\)</span></p>
 </div>
 </div>
 </div>
