--- a/static/stat671/note_stat671.html
+++ b/static/stat671/note_stat671.html
@@ -1518,9 +1518,15 @@ div.tocify {
 <li><p>A simple geometric solution</p></li>
 <li><p>A more general solution</p></li>
 </ul>
+<p>Dot product <span class="math inline">\(\vec a\vec b=a_xb_x+a_yb_y=|\vec a||\vec b|\cos(\theta)\)</span></p>
 <p>Exercise:</p>
+<p><span class="math inline">\(g(x)=&lt;C_+-C_-,X-C&gt;=&lt;C_+,X&gt;-&lt;C_-,X&gt;-&lt;C_+,C&gt;+&lt;C_-,C&gt;\)</span>;</p>
+<p><span class="math inline">\(&lt;C_+,X&gt;=&lt;\frac1{n_{+}}\sum\limits_{l\in I_+}^nx_i,x&gt;\)</span>;</p>
+<p><span class="math inline">\(&lt;C_-,X&gt;=&lt;\frac1{n_{-}}\sum\limits_{l\in I_-}^nx_i,x&gt;\)</span>;</p>
+<p><span class="math inline">\(&lt;C_+,C&gt;=&lt;C_+,\frac12C_+&gt;+&lt;C_+,\frac12C_-&gt;=\frac1{2n_{+}^2}\sum\limits_{(i,j)\in I_{+}}&lt;x_i,x_j&gt;+\frac12&lt;C_+,C_-&gt;\)</span></p>
+<p><span class="math inline">\(&lt;C_-,C&gt;=&lt;C_-,\frac12C_+&gt;+&lt;C_-,\frac12C_-&gt;=\frac12&lt;C_+,C_-&gt;+\frac1{2n_{-}^2}\sum\limits_{(i,j)\in I_{-}}&lt;x_i,x_j&gt;\)</span></p>
 <p><span class="math inline">\(g(x)=\sum_{l=1}^n\alpha_i&lt;x_i,x&gt;+b\)</span>,</p>
-<p><span class="math inline">\(b=\frac12\left[\frac1{n_{-}^L}\sum\limits_{(i,j)\in I_{-}}&lt;x_i,x_j&gt;-\frac1{n_{+}^L}\sum\limits_{(i,j)\in I_{+}}&lt;x_i,x_j&gt;\right]\)</span></p>
+<p><span class="math inline">\(b=\frac12\left[\frac1{n_{-}^2}\sum\limits_{(i,j)\in I_{-}}&lt;x_i,x_j&gt;-\frac1{n_{+}^2}\sum\limits_{(i,j)\in I_{+}}&lt;x_i,x_j&gt;\right]\)</span></p>
 <p><span class="math inline">\(\alpha_i=\begin{cases}\frac1{n_{+}}&amp;y_i=+1\\-\frac1{n_{-}}&amp;y_i=-1\end{cases}\)</span></p>
 
 #
